infra/manifests/statefulset.ultra-lightweight.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: xui-lightweight
spec:
  serviceName: xui
  replicas: 1
  selector:
    matchLabels:
      app: xui
  template:
    metadata:
      labels:
        app: xui
    spec:
      containers:
      - name: xui
        image: artur7892988/3xui-k8s-statefulset:ultra-lightweight
        ports:
        - containerPort: 2053
        command: ["/app/x-ui"]
        args: []
        resources:
          requests:
            memory: 64Mi
            cpu: 50m
          limits:
            memory: 128Mi
            cpu: 200m
        volumeMounts:
        - name: data
          mountPath: /etc/x-ui
        livenessProbe:
          exec:
            command: ["/app/healthcheck.ultra.sh"]
          initialDelaySeconds: 10
          periodSeconds: 60
        readinessProbe:
          exec:
            command: ["/app/healthcheck.ultra.sh"]
          initialDelaySeconds: 5
          periodSeconds: 30
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: standard
      resources:
        requests:
          storage: 1Gi
